update names and strings

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "office-add-in-microsoft-graph-react",
+    "name": "shifts-addin",
     "description": "",
     "author": "",
     "version": "1.0.0",
